# unity8-desktop-session

./: .bzrignore  Makefile.am  README  autogen.sh  configure.ac
data/: 45-unity8.conf  55-unity8.conf  Makefile.am  custom_unity8-mir_badge.xcf  custom_unity8-x11_badge.xcf  lightdm-unity8-session  sensors.txt  start-unity8-mir  unity8-copy-env.conf  unity8-desktop-session  unity8-mir.conf  unity8-mir.conf.in  unity8-mir.desktop  unity8-mir.desktop.in  unity8-snap.desktop  unity8-x11.desktop  unity8.desktop
debian/: 10-unity8-x11.conf  20-unity8-mir.conf  changelog  control  copyright  rules  unity8-desktop-session-mir.install  unity8-desktop-session-mir.maintscript  unity8-desktop-session-x11.install  unity8-desktop-session.install  unity8-session-mir.install  unity8-session-snap.install  unity8-session-snap.links  unity8-session-x11.install  watch
scripts/: Makefile.am  unity8-install  unity8-snap-install  unity8-snap-install.1
