# This file is part of Unity8-session-x11, a desktop session configration
# package.
#
# Copyright 2013 Canonical Ltd.
# 
# Unity8-session-x11 is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License version 3, as published by
# the Free Software Foundation.
# 
# This program is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranties of MERCHANTABILITY, SATISFACTORY
# QUALITY, or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
# License for more details.
# 
# You should have received a copy of the GNU General Public License along with
# this program.  If not, see <http://www.gnu.org/licenses/>.

AM_MAKEFLAGS = --no-print-directory

SUBDIRS = data scripts
EXTRA_DIST = autogen.sh
